--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,6 @@ jobs:
             uses: subosito/flutter-action@v2
             with:
               channel: 'stable'
+          - name: dependecies
+            run: flutter pub get
+            
